Added post and audio ui routes

--- a/app/directives/main.html
+++ b/app/directives/main.html
@@ -1,3 +1,6 @@
 <div class="main">
-    {{vm.greeting}}
+    <ul>
+        <li><a ng-click="vm.goToPost()">Post</a></li>
+        <li><a ng-click="vm.goToAudio()">Audio</a></li>
+    </ul>
 </div>
