--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Band Angular</title>
+    <base href="/">
 </head>
 <body ng-app="app">
 <main></main>
